implement logout api and docs (#27)
